# spelcheck

./: README.md  pyproject.toml  spelcheck.py  test_spelcheck.py
.github/workflows/: test.yml
