[tool.poetry]
name = "spelcheck"
version = "0.1.0"
description = "Automagically spellcheck your classes"
authors = ["L3viathan <git@l3vi.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
